--- a/TbdModule/src/main/res/values/colors.xml
+++ b/TbdModule/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="lavender">#8692f7</color>
     <color name="baige">#EFCE7B</color>
     <color name="pink">#FF00B8</color>
+    <color name="darkGreen">#05710A</color>
 </resources>
