--- a/TbdModule/src/main/res/layout/activity_login.xml
+++ b/TbdModule/src/main/res/layout/activity_login.xml
@@ -7,6 +7,14 @@
     android:background="@drawable/splash_background"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/loginIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/login_icon"
+    android:contentDescription="@string/login_icon_desc"
+    android:layout_marginBottom="24dp" />
+
     <EditText
         android:id="@+id/usernameInput"
         android:layout_width="match_parent"
