--- a/TbdModule/src/main/res/menu/drawer_menu.xml
+++ b/TbdModule/src/main/res/menu/drawer_menu.xml
@@ -5,6 +5,9 @@
 
     <group
         android:checkableBehavior="single">
+        <item
+            android:title="Buildings">
+            <menu>
     <item
         android:id="@+id/nav_home"
         android:title="@string/building_a2"
@@ -24,16 +27,26 @@
         android:id="@+id/nav_fourth"
         android:title="@string/building_d2"
         android:icon="@drawable/dbuilding"/>
+            </menu>
+        </item>
 </group>
     <group
         android:checkableBehavior="single">
     <item
-        android:title="Settings">
+        android:title="Misc">
         <menu>
             <item
                 android:id="@+id/nav_settings"
                 android:icon="@drawable/settings_menu"
                 android:title="Settings"/>
+            <item
+                android:id="@+id/nav_profile"
+                android:icon="@drawable/settings_menu"
+                android:title="Profile"/>
+            <item
+                android:id="@+id/nav_feedback"
+                android:icon="@drawable/settings_menu"
+                android:title="Feedback"/>
         </menu>
     </item>
     </group>
