--- a/TbdModule/src/main/res/layout/activity_registration.xml
+++ b/TbdModule/src/main/res/layout/activity_registration.xml
@@ -1,6 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="16dp"
+    android:gravity="center"
+    android:background="@drawable/splash_background"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<TextView
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:text="@string/register"
+android:textSize="24sp"
+android:layout_marginBottom="24dp"/>
+
+    <!-- Name input field -->
+<EditText
+android:id="@+id/nameInput"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:hint="@string/name"
+android:inputType="text" />
+
+    <!-- Email input field -->
+<EditText
+android:id="@+id/emailInput"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:hint="@string/email"
+android:inputType="textEmailAddress"
+android:layout_marginTop="16dp" />
+    <EditText
+        android:id="@+id/passwordInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:layout_marginTop="16dp" />
+
+    <Button
+        android:id="@+id/registerButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/register"
+        android:layout_marginTop="24dp" />
+    <Button
+        android:id="@+id/googleSignUpButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="@string/google_sign_up" />
+</LinearLayout>
