--- a/TbdModule/src/main/res/menu/drawer_menu.xml
+++ b/TbdModule/src/main/res/menu/drawer_menu.xml
@@ -41,7 +41,7 @@
                 android:title="Settings"/>
             <item
                 android:id="@+id/nav_profile"
-                android:icon="@drawable/settings_menu"
+                android:icon="@drawable/profile"
                 android:title="Profile"/>
             <item
                 android:id="@+id/nav_feedback"
