-Added svg vector file and new vector assets. -Added new fragment links in the options menu

--- a/TbdModule/src/main/res/menu/drawer_menu.xml
+++ b/TbdModule/src/main/res/menu/drawer_menu.xml
@@ -45,7 +45,7 @@
                 android:title="Profile"/>
             <item
                 android:id="@+id/nav_feedback"
-                android:icon="@drawable/settings_menu"
+                android:icon="@drawable/feedback"
                 android:title="Feedback"/>
         </menu>
     </item>
