--- a/TbdModule/src/main/res/menu/menu_item.xml
+++ b/TbdModule/src/main/res/menu/menu_item.xml
@@ -3,37 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:title="@string/options"
-        android:icon=""
+        android:icon="@drawable/menu_vertical"
         >
 <menu>
 
-            <item
-                android:id="@+id/settings"
-                android:title="@string/settings"
-                app:showAsAction="never"
-                android:icon="@drawable/tbd_settings"/>
+    <item
+        android:id="@+id/settings"
+        android:title="@string/settings"
+        android:icon="@drawable/tbd_settings"
+        />
+    <item
+        android:id="@+id/info"
+        android:title="@string/about_us"
+        android:icon="@drawable/tbd_info"
+        />
+    <item
+        android:id="@+id/feedback"
+        android:title="@string/feedback"
+        android:icon="@drawable/tbd_feedback"
+        />
+    <item
+        android:id="@+id/exit"
+        android:title="@string/exit"
+        android:icon="@drawable/tbd_exit"
+        />
 
-            <item
-                android:id="@+id/info"
-                android:title="@string/about_us"
-                app:showAsAction="never"
-                android:icon="@drawable/tbd_info"
-                />
-            <item
-                android:id="@+id/feedback"
-                android:title="@string/feedback"
-                app:showAsAction="never"
-                android:icon="@drawable/tbd_feedback"
-                />
-            <item
-                android:id="@+id/exit"
-                android:title="@string/exit"
-                app:showAsAction="never"
-                android:icon="@drawable/tbd_exit"
-                />
 </menu>
+
     </item>
 
 </menu>
