--- a/TbdModule/src/main/res/layout/activity_main.xml
+++ b/TbdModule/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@ Section RCB
             android:layout_height="56dp"
             android:id="@+id/toolbar2"
             android:elevation="4dp"
-            android:background="@color/lavender"
+            android:background="@color/teal_700"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:menu="@menu/menu_item"
