--- a/TbdModule/src/main/res/values/themes.xml
+++ b/TbdModule/src/main/res/values/themes.xml
@@ -12,6 +12,13 @@
         <item name="colorAccent">@color/white</item>
         <item name="android:statusBarColor">@color/baige</item>
     </style>
+    <style name="nightModeSwitch" parent="Theme.AppCompat.Light">
+        <item name="colorControlActivated">@color/black</item>
+        <item name="colorSwitchThumbNormal">@color/white</item>
+        <item name="android:colorForeground">@color/baige</item>
+
+
+    </style>
 
     <style name="Theme.SmartLibraryStudyRoomManagementAndComfortSystem" parent="Base.Theme.SmartLibraryStudyRoomManagementAndComfortSystem" />
 </resources>
